--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,7 @@
 
 \begin{document}
 
-\begin{recipe}{Banana Pancakes}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Banana Almond Pancakes}{\tag{V}\totaltime{20 min}}
 \begin{ingredients}
 1 banana
 2 eggs
@@ -236,7 +236,7 @@ Makes 6 small pies
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Pulla}{\preheat{\celsius{220}}\totaltime{1h 15 min}}
+\begin{recipe}{Pulla}{\tag{V}\preheat{\celsius{220}}\totaltime{1h 15 min}}
 \begin{ingredients}
 5 dl whole milk, warm
 50 g fresh yeast or 15 g dry
@@ -299,5 +299,101 @@ Serves 2
     \item Add maple syrup and salt to taste
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Chicken Thighs with Preserved Lemon}{\totaltime{50 min}}
+\begin{ingredients}
+1 tbsp olive oil
+8 bone-in chicken thighs
+salt and pepper
+half a preserved lemon, minced
+lemon wedges
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Heat olive oil on medium
+    \item Season chicken with salt and pepper
+    \item Cook skin side down 15 to 30 min, until deep golden brown, adjusting heat to avoid burning
+    \item Flip and stir in preserved lemon
+    \item Cook until meat closest to bone is done, about 15 min
+    \item Serve with pan drippings and lemon wedges
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Pannukakku}{\tag{V}\preheat{\celsius{200}}\totaltime{1 h 20 min}}
+\begin{ingredients}
+4 dl flour
+1/2-1 dl sugar
+1 tsp baking powder
+1 tsp salt
+1 tsp cardamom or vanilla extract
+8 dl milk
+3 eggs
+50 g melted butter
+\end{ingredients}
+\nextcolumn
+Serves 6 to 8
+\begin{steps}
+    \item Combine dry ingredients
+    \item Whisk in milk and eggs
+    \item Add melted butter
+    \item Let rest for 30 min
+    \item Pour into a parchment paper lined sheet pan or buttered baking dish
+    \item Cook at \celsius{200} for 40 min
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Bilberry Oat Pie}{\tag{V}\preheat{\celsius{175}}\totaltime{1 h}}
+\begin{ingredients}
+100 g butter
+3/4 dl sugar
+1 egg
+3 dl rolled oats
+1/2 dl flour
+1/2-1 tsp cinnamon
+1/2 tsp baking powder
+4-5 dl bilberries
+1/2-1 dl raspberries
+sugar for sprinkling
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Cream butter and sugar
+    \item Whisk in egg
+    \item Mix dry ingredients and add to wet
+    \item Press into bottom of 24-26 cm pie dish
+    \item Fill with berries
+    \item Bake at \celsius{175} for 25 to 35 min, until edges are golden brown
+    \item Sprinkle up to 1/2 dl sugar on top, to taste
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Spiced Berry Pie}{\tag{V}\preheat{\celsius{200}}\totaltime{1 h}}
+\begin{ingredients}
+100 g butter
+1 + 1/2 dl sugar
+1 + 1 eggs
+2 dl flour
+1/2 tsp baking powder
+1 tsp cinnamon
+1 tsp cloves
+1 tsp ginger
+3-4 dl berries
+200 g sour cream
+1/2 dl heavy cream
+1 tsp vanilla extract
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Cream butter and 1 dl sugar
+    \item Whisk in 1 egg
+    \item Mix dry ingredients and add to wet
+    \item Press into bottom of 24-26 cm pie dish
+    \item Fill with berries
+    \item Mix rest of ingredients, including 1/2 dl sugar and 1 egg, and pour onto berries
+    \item Bake at \celsius{200} for 25 to 35 min
+\end{steps}
+\end{denserecipe}
 
 \end{document}
