--- a/main.tex
+++ b/main.tex
@@ -429,4 +429,33 @@ Serves 8
 \end{steps}
 \end{denserrecipe}
 
+\begin{denserecipe}{Classic Chicken Salad}{\totaltime{2 h}}
+\begin{ingredients}
+1 3/4 lb chicken breasts
+Salt and black pepper
+2 lemons, divided
+4 sprigs of tarragon
+1 tbsp minced tarragon
+1/4 cup mayonnaise
+1 tbsp Dijon mustard
+1 tbsp minced parsley
+1 tbsp minced chives
+1/2 red onion, diced
+2 stalks celery, diced
+1 clove garlic, minced
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Season chicken with salt and pepper and seal into sous-vide bags with slices from 1 lemon
+    \item Cook chicken in water bath at \celsius{65} for 1 h
+    \item Chill chicken in ice bath for 15 min
+    \item Meanwhile, add 2 tbsp juice and 1 tsp zest from 1 lemon to a large bowl
+    \item Mix in remaining ingredients
+    \item Keep refrigerated until needed
+    \item When chicken is ready, cut into 1/2-inch cubes
+    \item Fold chicken gently into dressing
+    \item Season to taste with salt and pepper
+\end{steps}
+\end{denserecipe}
+
 \end{document}
