Add new recipes

--- a/main.tex
+++ b/main.tex
@@ -475,4 +475,125 @@ Makes 4 to 6 large crepes
 Fill sweet crepes with sugar and lemon juice, or whipped cream and berries; savory crepes with mushrooms and ricotta, or ham, cheese and fried eggs.
 \end{recipe}
 
+\begin{denserecipe}{Pressure Cooker Miso Risotto}{\tag{VG}\totaltime{25 min}}
+\begin{ingredients}
+6 tbsp olive oil
+1 shallot, minced
+3 cloves garlic, minced
+2 cups risotto rice
+3/4 cup dry sake
+2 tsp soy sauce
+1/4 cup miso paste
+4 cups chicken stock
+1/2 tsp lemon juice
+salt
+green onion or chives
+\end{ingredients}
+\nextcolumn
+Serves 4 to 6
+\begin{steps}
+    \item Heat olive oil over medium-high heat in cooker
+    \item Saute shallot and garlic until translucent
+    \item Add rice and cook until translucent but not browned, about 3 to 4 minutes
+    \item Add sake and cook until alcohol dissipates
+    \item Stir in soy sauce and miso paste
+    \item Add stock and cook at 10 psi for 5 minutes, then depressurize using quick release
+    \item Add lemon juice and stir until creamy
+    \item Stir in onion and season to taste with salt
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Oatmeal Pannukakku}{\tag{V}\preheat{\celsius{200}}\totaltime{35 min}}
+\begin{ingredients}
+2 dl oatmeal
+2 dl milk
+2 eggs
+1 dl flour
+1 tbsp sugar
+1 tsp vanilla extract
+1/4 tsp salt
+1/2 dl nuts, chopped
+2 tbsp dried cranberries or raisins
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Mix together oatmeal and milk
+    \item Add eggs, flour, sugar, vanilla and salt, and mix thoroughly
+    \item Pour batter into a buttered baking dish
+    \item Sprinkle nuts and fruits on top
+    \item Bake at \celsius{200} for 25 minutes
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Healthy Imam Bayildi}{\tag{VG}\preheat{\fahrenheit{375}}\totaltime{1 h 20 min}}
+\begin{ingredients}
+2 large globe eggplants
+2 tbsp olive oil
+cooking spray
+salt and pepper
+2 onions, thinly sliced
+4 cloves garlic, minced
+2 tsp ground coriander
+1 tsp ground cumin
+1/2 tsp cayenne pepper
+15 oz crushed tomatoes
+1/4 cup parsley, chopped
+1/4 cup pine nuts, toasted
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Cut eggplant into 1/4-inch slices, spray with cooking spray and season with salt and pepper
+    \item Bake for 30 minutes at \fahrenheit{375}, turning once
+    \item Meanwhile, cook onions in olive oil on medium-low for 15 minutes until starting to turn golden
+    \item Add garlic and spices, stirring until fragrant
+    \item Add tomatoes and heat through
+    \item Assemble into two layers, with sauce on bottom and top
+    \item Bake for 25 minutes at \fahrenheit{375}
+    \item Sprinkle with pine nuts and parsley
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Pesto}{\tag{VG}\totaltime{10 min}}
+\begin{ingredients}
+60 g basil leaves 
+1/2 tsp kosher salt
+30 g pine nuts
+zest of 1/2 lemon
+2 tsp lemon juice
+1 small garlic clove
+15 g parmesan
+1/3 cup or 3/4 dl extra virgin olive oil
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Process everything except oil in a food processor
+    \item With the food processor running, pour in olive oil and process until incorporated
+    \item Season to taste with salt
+\end{steps}
+Omit lemon juice if using Pecorino Romano.
+\end{recipe}
+
+\begin{denserecipe}{No-Knead Bread}{\tag{VG}\totaltime{14 h}}
+\begin{ingredients}
+400 g bread flour
+8 g salt (2 tsp kosher)
+2.25 g active dry yeast (heaping 1/2 tsp)
+280 g warm water
+1/8 tsp vinegar or lemon juice
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Combine dry and wet ingredients separately, then quickly mix the dough
+    \item Rest covered at room temperature for 12 hours
+    \item Dust with flour and invert onto floured surface
+    \item To shape, fold edge over the middle from four sides, flip loaf and tuck edges under until taut
+    \item Transfer into bowl with floured towel
+    \item Proof until doubled, about 2 hours, and preheat oven to \fahrenheit{500} 30 before baking
+    \item Invert onto baking sheet, gently remove towel and cover with water-spritzed metal bowl
+    \item Lower temperature to \fahrenheit{450}, bake for 25 min with bowl, and 15 to 25 min more without
+\end{steps}
+\end{denserecipe}
+
 \end{document}
