--- a/main.tex
+++ b/main.tex
@@ -579,7 +579,7 @@ Omit lemon juice if using Pecorino Romano.
 \begin{ingredients}
 400 g bread flour
 8 g salt (2 tsp kosher)
-2.25 g active dry yeast (heaping 1/2 tsp)
+2 g instant dry yeast (1/2 tsp) or 2.25 g active dry yeast (heaping 1/2 tsp)
 280 g warm water
 1/8 tsp vinegar or lemon juice
 \end{ingredients}
@@ -590,9 +590,28 @@ Omit lemon juice if using Pecorino Romano.
     \item Dust with flour and invert onto floured surface
     \item To shape, fold edge over the middle from four sides, flip loaf and tuck edges under until taut
     \item Transfer into bowl with floured towel
-    \item Proof until doubled, about 2 hours, and preheat oven to \fahrenheit{500} 30 before baking
+    \item Proof until doubled, about 2 hours, and preheat oven to \fahrenheit{500} 30 min before baking
     \item Invert onto baking sheet, gently remove towel and cover with water-spritzed metal bowl
     \item Lower temperature to \fahrenheit{450}, bake for 25 min with bowl, and 15 to 25 min more without
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Low-Knead Bread}{\tag{VG}\totaltime{14 h to 3 days}}
+\begin{ingredients}
+400 g bread flour
+8 g salt (2 tsp kosher)
+2 g instant dry yeast (1/2 tsp) or 2.25 g active dry yeast (heaping 1/2 tsp)
+300 g warm water
+1/8 tsp vinegar or lemon juice
+\end{ingredients}
+\nextcolumn
+This is a variation on No-Knead Bread with additional folds and higher hydration.
+\begin{steps}
+    \item Make the dough as in No-Knead Bread
+    \item After 30 min, using wet hand lift, stretch and fold over an edge; rotate and repeat 4 to 6 times to work all the way around the dough
+    \item Repeat folds 4 to 6 times over 2 to 3 hours
+    \item Resting: in refrigerator overnight or up to 3 days, then at room temperature 3 to 10 hours; or at room temperature for 10 hours
+    \item Shape, proof and bake as in No-Knead Bread
 \end{steps}
 \end{denserecipe}
 
