Add salmon pate

--- a/main.tex
+++ b/main.tex
@@ -615,4 +615,32 @@ This is a variation on No-Knead Bread with additional folds and higher hydration
 \end{steps}
 \end{denserecipe}
 
+\begin{denserecipe}{Salmon Pate}{\fahrenheit{300}\totaltime{50 min}}
+\begin{ingredients}
+1 lb salmon fillet
+zest of 1 lemon
+2 tsp lemon juice
+1 shallot, minced
+1 tbsp capers, minced
+2 tbsp herbs, minced
+4 oz cold smoked salmon
+2 tbsp soft butter
+4-5 tbsp mayonnaise
+2 tbsp sour cream
+1 tbsp Dijon mustard
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 4 in a main, 8 in an appetizer. \\
+Good herbs: tarragon, parsley, dill and chives.
+\begin{steps}
+\item Rub salmon with salt and oil and bake salmon at \fahrenheit{300} for 15 min or until just done
+\item Let rest for 20 to 30 min
+\item Meanwhile, mince cold smoked salmon and smoothly combine with everything else
+\item Add cooled baked salmon and mix thoroughly
+\item Chill for at least 4 hours
+\end{steps}
+Use as filling for sandwiches, cream puffs or crepes. 
+\end{denserecipe}
+
 \end{document}
