Update some tags

--- a/main.tex
+++ b/main.tex
@@ -567,7 +567,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Pesto}{\tag{VG}\totaltime{10 min}}
+\begin{recipe}{Pesto}{\tag{V}\totaltime{10 min}}
 \begin{ingredients}
 60 g basil leaves 
 1/2 tsp kosher salt
@@ -655,7 +655,7 @@ Good herbs: tarragon, parsley, dill and chives.
 Use as filling for sandwiches, cream puffs or crepes. 
 \end{denserecipe}
 
-\begin{densecard}{Rich Salad Dressings}{}
+\begin{densecard}{Rich Salad Dressings}{\tag{V}\totaltime{10 min}}
 \begin{tabularx}{\textwidth}{@{}XXXXX@{}}
 \toprule
 Base & Aromatics & Sweetness & Acid & Oil \\
