Change ingredient header capitalization

--- a/main.tex
+++ b/main.tex
@@ -730,15 +730,15 @@ Omit with fatty base
 
 \begin{recipe}{Fruit Posset}{\tag{V}\totaltime{4 h 45 min}}
 \begin{ingredients}
-\ihead{puree}
+\ihead{Puree}
 2 cups diced fruit
 1 tsp sugar
-\ihead{cream}
+\ihead{Cream}
 1/2 cup sugar
 2 cups heavy cream
 1/4 tsp vanilla extract
 1/4 cup lemon juice
-\ihead{topping}
+\ihead{Topping}
 2/3 cup diced fruit
 1 tsp white sugar
 \end{ingredients}
