Add more quick pastas

--- a/main.tex
+++ b/main.tex
@@ -770,16 +770,18 @@ Serves 4. Great with berries or stone fruit.
 \ihead{B3S3} butternut\ijoin{}squash shallot sage butter lemon parmesan
 
 \nextcolumn
-\ihead{Al Limone} butter garlic lemon\ijoin{}zest lemon\ijoin{}juice pepper parmesan
-
 \ihead{Pomarola} cherry\ijoin{}tomatoes garlic basil parmesan
+
+\ihead{Scampi} olive\ijoin{}oil shrimp garlic chili white\ijoin{}wine butter lemon\ijoin{}juice lemon\ijoin{}{zest} parsley
 
 \ihead{All'Amatriciana} guanciale chili white\ijoin{}wine crushed\ijoin{}tomatoes\\pecorino\ijoin{}romano
 
 \nextcolumn
+\ihead{Al Limone} butter garlic lemon\ijoin{}zest lemon\ijoin{}juice pepper parmesan
+
 \ihead{Puttanesca} garlic anchovies chili capers olives crushed\ijoin{}tomatoes parsley parmesan
 
-\ihead{Al Tonno} anchovy capers garlic white\ijoin{}wine oregano chili tuna crushed\ijoin{}tomatoes parsley parmesan
+\ihead{Al Tonno} garlic chili crushed\ijoin{}tomatoes tuna fish\ijoin{}sauce parsley
 \end{paracol}
 \end{densecard}
 
