Add lighter fettucine alfredo

--- a/main.tex
+++ b/main.tex
@@ -785,4 +785,29 @@ Serves 4. Great with berries or stone fruit.
 \end{paracol}
 \end{densecard}
 
+\begin{recipe}{Lighter Fettucine Alfredo}{\tag{V}\totaltime{30 min}}
+\begin{ingredients}
+140 g parmesan
+2 tbsp heavy cream
+1 large egg
+1 tsp cornstarch
+2 tbsp olive oil
+1/2 tsp lemon zest, grated
+salt and lots of pepper
+1 lb fresh fettuccine
+1 clove garlic, minced
+2 tbsp butter
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Whisk together cheese, cream, egg, cornstarch, oil, lemon zest, salt and pepper
+    \item Boil fresh fettucine for 45 seconds and drain, reserving 2 cups cooking water
+    \item Toss pasta with garlic and butter
+    \item Whisk 1 1/2 cups pasta water into cheese
+    \item Transfer to pasta pot and cook on medium-high until thickened, about 45 seconds
+    \item Toss pasta in sauce, adjust consistency
+\end{steps}
+\end{recipe}
+
 \end{document}
