Add a sandwich bread and noodles

--- a/main.tex
+++ b/main.tex
@@ -611,7 +611,7 @@ zest of 1/2 lemon
 Omit lemon juice if using Pecorino Romano.
 \end{recipe}
 
-\begin{denserecipe}{No-Knead Bread}{\tag{VG}\totaltime{14 h}}
+\begin{denserecipe}{No-Knead Bread}{\tag{VG}\preheat{\fahrenheit{500/450}}\totaltime{14 h}}
 \begin{ingredients}
 400 g bread flour
 8 g salt (2 tsp kosher)
@@ -809,5 +809,53 @@ Serves 4
     \item Toss pasta in sauce, adjust consistency
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Tangzhong Pain de Mie}{\tag{VG}\preheat{\fahrenheit{350}}\totaltime{3h 30 min}}
+\begin{ingredients}
+\ihead{Tangzhong}
+30 g flour
+150 ml milk
+\ihead{Dough}
+350 ml lukewarm milk
+85 g soft butter
+15 g salt
+35 g sugar
+35 g potato flour
+565 g bread flour
+2 tsp instant yeast
+\end{ingredients}
+\nextcolumn
+Makes one 13"x4"x4" Pullman loaf.
+\begin{steps}
+    \item Microwave tangzhong for 1+1 min
+    \item Combine everything and knead for 10 min
+    \item Allow to rise in greased bowl for 1 h 30 min, until puffy but not quite doubled
+    \item Shape into log and move to buttered pan
+    \item Let rise until just below the lip of the pan, 45 min to 1 hour
+    \item Bake at \fahrenheit{350} for 25 min with lid and 20 more without
+\end{steps}
+\end{recipe}
+
+\begin{densecard}{Noodles in Pan Fried Sauce}{\totaltime{20 min}}
+\begin{steps}
+    \item Stir fry and simmer ingredients in order, leaving garnishes for plating
+    \item Meanwhile, boil noodles and then toss with the sauce, plate and garnish
+\end{steps}
+\columnratio{0.333}
+\begin{paracol}{3}
+\ihead{Pad Thai} scallions garlic eggs napa\ijoin{}cabbage bean\ijoin{}sprouts shrimp tamarid\ijoin{}paste nam\ijoin{}pla honey vinegar chili peanuts cilantro limes
+
+\ihead{Dan Dan} chili\ijoin{}oil vinegar soy\ijoin{}sauce sugar garlic ground\ijoin{}pork pickled\ijoin{}mustard\ijoin{}tuber peanuts
+sichuan\ijoin{}pepper
+
+\nextcolumn
+\ihead{Zha Jiang} diced\ijoin{}pork ginger shaoxing\ijoin{}wine bean\ijoin{}sauce onion
+
+\ihead{Lo Mein} cabbage shiitake scallions garlic white\ijoin{}pepper sesame\ijoin{}oil soy\ijoin{}sauce shaoxing\ijoin{}wine
+
+\nextcolumn
+\ihead{Mie Goreng} garlic shallot chili shrimp cabbage molasses oyster\ijoin{}sauce soy\ijoin{}sauce sesame\ijoin{}oil
+\end{paracol}
+\end{densecard}
 
 \end{document}
