--- a/main.tex
+++ b/main.tex
@@ -810,7 +810,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Tangzhong Pain de Mie}{\tag{VG}\preheat{\fahrenheit{350}}\totaltime{3h 30 min}}
+\begin{recipe}{Tangzhong Pain de Mie}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{3h 30 min}}
 \begin{ingredients}
 \ihead{Tangzhong}
 30 g flour
@@ -857,5 +857,77 @@ sichuan\ijoin{}pepper
 \ihead{Mie Goreng} garlic shallot chili shrimp cabbage molasses oyster\ijoin{}sauce soy\ijoin{}sauce sesame\ijoin{}oil
 \end{paracol}
 \end{densecard}
+
+\begin{denserecipe}{Creamy Vegan Tomato Soup}{\tag{VG}\totaltime{20 min}}
+\begin{ingredients}
+1 tbsp olive oil
+1 cloves of garlic, grated
+1/2 small onion, sliced
+1/2 tsp oregano
+1/4 tsp red pepper flakes
+crustless slice of bread, torn into small pieces
+28 oz (800 g) canned peeled tomatoes
+1 cup water
+3 tbsp olive oil
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 2 to 3
+\begin{steps}
+    \item Saute garlic, onion, oregano and red pepper in oil until softened
+    \item Mash in bread and tomatoes
+    \item Add water and simmer for 5 minutes
+    \item Blend soup until smooth and drizzle in olive oil with blender on high
+\end{steps}
+Garnish with herbs and more olive oil.
+\end{denserecipe}
+
+\begin{recipe}{Pressure Cooker Rice and Beans}{\tag{VG}\totaltime{30 min}}
+\begin{ingredients}
+2 tbsp oil
+1 onion, chopped
+1 1/4 cups chicken stock
+1 tsp salt
+1 cup rice
+15 oz canned beans
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Saute onion until soft
+    \item Add stock, salt, rice and beans
+    \item Cook on high for 3 minutes, natural release 15 minutes
+    \item Fluff
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Quick Chicken Couscous}{\totaltime{20 min}}
+\begin{ingredients}
+1 1/4 cups couscous
+1/2 tsp kosher salt
+3 tbsp olive oil
+skinless chicken breast
+1/2 red onion, diced
+1 cup chicken broth
+2 cups vegetables, diced
+1/2 tsp smoked paprika
+1/2 tsp turmeric
+2 tbsp italian parsley
+\end{ingredients}
+\nextcolumn
+Vegetables: zucchini, green beans, bell pepper, green onions
+
+Serves 2
+\begin{steps}
+    \item Mix couscous, salt and olive oil, and level off
+    \item Salt chicken and brown one side over high heat
+    \item Flip, add onions and sear other side
+    \item Dice chicken and return to pan
+    \item Add broth, vegetables and spices
+    \item Bring to boil, pour over couscous and cover
+    \item After 5 minutes stir in parsley and adjust salt
+\end{steps}
+Garnish with crumbled feta or yoghurt sauce
+\end{denserecipe}
 
 \end{document}
