--- a/main.tex
+++ b/main.tex
@@ -843,7 +843,7 @@ Makes one 13"x4"x4" Pullman loaf.
 \end{steps}
 \columnratio{0.333}
 \begin{paracol}{3}
-\ihead{Pad Thai} scallions garlic eggs napa\ijoin{}cabbage bean\ijoin{}sprouts shrimp tamarid\ijoin{}paste nam\ijoin{}pla honey vinegar chili peanuts cilantro limes
+\ihead{Pad Thai} scallions garlic eggs napa\ijoin{}cabbage bean\ijoin{}sprouts shrimp tamarind\ijoin{}paste nam\ijoin{}pla honey vinegar chili peanuts cilantro limes
 
 \ihead{Dan Dan} chili\ijoin{}oil vinegar soy\ijoin{}sauce sugar garlic ground\ijoin{}pork pickled\ijoin{}mustard\ijoin{}tuber peanuts
 sichuan\ijoin{}pepper
@@ -929,5 +929,80 @@ Serves 2
 \end{steps}
 Garnish with crumbled feta or yoghurt sauce
 \end{denserecipe}
+
+\begin{recipe}{Cream Biscuits}{\tag{V}\preheat{\fahrenheit{400}}\totaltime{25 min}}
+\begin{ingredients}
+2 dl flour
+2 tsp baking powder
+1/2 tsp kosher salt
+1 tsp sugar
+1 1/2 dl heavy cream
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Whisk together dry ingredients
+    \item Stir in cream until just combined
+    \item Turn out onto floured surface
+    \item Fold until just cohesive and flatten to an even 1/2-inch thickness
+    \item Cut out biscuits, gather scraps and repeat
+    \item Bake in \fahrenheit{400} oven for 12-15 minutes
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Sausage Gravy}{\totaltime{20 min}}
+\begin{ingredients}
+1 lb breakfast sausage
+  or
+1/2 lb each sausage and mushrooms
+1 tbsp oil
+1/4 cup flour
+2 cups cold milk
+salt and pepper
+with plain sausage: sage, red pepper, marjoram, thyme
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Brown sausage (and mushrooms if using) in oil over high heat
+    \item Reduce heat to medium
+    \item Stir in flour and cook for 1 minute
+    \item Add milk and stir constantly until smooth
+    \item Cook stirring frequently until thickened
+    \item Season and adjust consistency with milk
+\end{steps}
+\end{recipe}
+
+\begin{densecard}{Broiled Sandwiches}{\totaltime{15 min}}
+\begin{steps}
+    \item Assemble onto sliced bread from ingredients in order
+    \item Cook under broiler until cheese melts, but before edges burn
+\end{steps}
+\columnratio{0.333}
+\begin{paracol}{3}
+\ihead{Pizza} tomato\ijoin{}paste diced\ijoin{}pepperoni oregano grated\ijoin{}mozzarella
+
+\ihead{Croque Monsieur} butter mustard ham nutmeg gruyère
+
+\ihead{Tuna-Artichoke} mayonnaise black\ijoin{}pepper tuna artichoke\ijoin{}hearts cheddar
+
+\nextcolumn
+
+\ihead{Tomato} olive\ijoin{}oil garlic tomato parmesan grated\ijoin{}mozzarella
+
+\ihead{Hawaiian} butter ketchup canadian\ijoin{}bacon pineapple monterey\ijoin{}jack
+
+\ihead{Rarebit} mix\ijoin{}(mustard grated\ijoin{}cheddar beer cayenne garlic\ijoin{}powder)
+
+\nextcolumn
+
+\ihead{Turkey} butter mustard turkey tomato dill\ijoin{}havarti
+
+\ihead{Apple\&Swiss} mayonnaise mustard ham apple swiss
+
+\ihead{Sausage-Pepper} butter sausages pickled\ijoin{}onion roast\ijoin{}red\ijoin{}peppers\\ grated\ijoin{}mozzarella
+
+\end{paracol}
+\end{densecard}
 
 \end{document}
