--- a/main.tex
+++ b/main.tex
@@ -927,7 +927,7 @@ Serves 2
     \item Bring to boil, pour over couscous and cover
     \item After 5 minutes stir in parsley and adjust salt
 \end{steps}
-Garnish with crumbled feta or yoghurt sauce
+Garnish with crumbled feta or yoghurt sauce.
 \end{denserecipe}
 
 \begin{recipe}{Cream Biscuits}{\tag{V}\preheat{\fahrenheit{400}}\totaltime{25 min}}
@@ -985,24 +985,105 @@ Serves 4
 \ihead{Croque Monsieur} butter mustard ham nutmeg gruyère
 
 \ihead{Tuna-Artichoke} mayonnaise black\ijoin{}pepper tuna artichoke\ijoin{}hearts cheddar
-
 \nextcolumn
-
 \ihead{Tomato} olive\ijoin{}oil garlic tomato parmesan grated\ijoin{}mozzarella
 
 \ihead{Hawaiian} butter ketchup canadian\ijoin{}bacon pineapple monterey\ijoin{}jack
 
 \ihead{Rarebit} mix\ijoin{}(mustard grated\ijoin{}cheddar beer cayenne garlic\ijoin{}powder)
-
 \nextcolumn
-
 \ihead{Turkey} butter mustard turkey tomato dill\ijoin{}havarti
 
 \ihead{Apple\&Swiss} mayonnaise mustard ham apple swiss
 
-\ihead{Sausage-Pepper} butter sausages pickled\ijoin{}onion roast\ijoin{}red\ijoin{}peppers\\ grated\ijoin{}mozzarella
-
+\ihead{Sausage-Pepper} butter sausages pickled\ijoin{}onion roast\ijoin{}red\ijoin{}peppers\\grated\ijoin{}mozzarella
 \end{paracol}
 \end{densecard}
+
+\begin{recipe}{Hollandaise Sauce}{\totaltime{10 min}}
+\begin{ingredients}
+2 egg yolks
+1 tbsp lemon juice
+1/2 tsp dijon mustard
+6 tbsp salted butter
+cayenne or hot sauce
+\end{ingredients}
+\nextcolumn
+Serves 2-3
+\begin{steps}
+    \item Melt the butter
+    \item Whisk yolks, lemon juice and mustard in double boiler over barely simmering water
+    \item Slowly whisk in butter until sauce is thick
+    \item Whisk in cayenne or hot sauce
+\end{steps}
+Keep the sauce warm in the double boiler, whisking occasionally, until ready to use.
+\end{recipe}
+
+\begin{recipe}{Simple Pie Crust}{\totaltime{1 h 15 min}}
+\begin{ingredients}
+150 g flour
+1/4 tsp salt
+10 tbsp cold unsalted butter
+2 to 4 tbsp cold water
+\end{ingredients}
+\nextcolumn
+Makes enough for one 9-inch pie
+\begin{steps}
+    \item Cut butter into small cubes
+    \item Pulse flour and salt in food processor
+    \item Add butter and pulse until coarsely mixed
+    \item Slowly pulse in water until dough just comes together and is moist but not wet
+    \item Gather into ball and refrigerate wrapped at least 1 hour and up to 2 days
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Heirloom Tomato Tart}{\preheat{\fahrenheit{375}}\totaltime{1 h 30 min}}
+\begin{ingredients}
+simple pie crust
+500 g ripe heirloom tomatoes
+1/4 cup pesto
+3/4 cup mozzarella, shredded
+2 tbsp fresh basil and oregano, finely chopped
+3 large eggs
+1/3 cup heavy cream
+1/2 tsp kosher salt
+1/2 tsp black pepper
+\end{ingredients}
+\nextcolumn
+Serves 4 to 6
+\begin{steps}
+    \item Cut tomatoes into 1/2-inch slices and put into colander to drain
+    \item Roll out dough and fit into 9-inch pan, allowing edges to rise above the rim
+    \item Prick all over with a fork
+    \item Blind bake for 15 minutes in \fahrenheit{375}
+    \item Whisk together eggs, cream, salt and pepper
+    \item Spread in pesto; sprinkle in mozzarella and herbs; layer in tomatoes; and pour in custard
+    \item Bake 35 minutes until filling is set
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Miso-Sesame Vinaigrette}{\preheat{\fahrenheit{350}}\totaltime{10 min}}
+\begin{ingredients}
+2 tbsp sesame seeds
+2 cloves garlic, smashed
+1 small shallot, chopped
+2 tbsp soy sauce
+2 tbsp white wine vinegar
+2 tbsp balsamic
+1 tbsp miso paste
+1 tbsp brown sugar
+1/2 cup canola oil
+2 tbsp sesame oil
+\end{ingredients}
+\nextcolumn
+Makes about 1 1/2 cups of dressing
+\begin{steps}
+    \item Toast sesame seeds at \fahrenheit{350} for 5 minutes
+    \item Blend garlic, shallot, soy, vinegars, miso and sugar until homogeneous
+    \item Blend in oil until emulsified
+    \item Stir in sesame oil and toasted seeds
+\end{steps}
+Can be stored in refrigerator for 3 weeks.
+\end{recipe}
 
 \end{document}
