--- a/main.tex
+++ b/main.tex
@@ -1086,4 +1086,28 @@ Makes about 1 1/2 cups of dressing
 Can be stored in refrigerator for 3 weeks.
 \end{recipe}
 
+\begin{recipe}{Lemony Asparagus Soup}{\totaltime{15 min}}
+\begin{ingredients}
+1 bunch asparagus, chopped
+2 shallots, chopped
+2 tbsp olive oil
+1/2 dl parsley
+1 lemon
+1/2 tsp sugar
+1/2 l chicken stock
+150 g creme fraiche
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Saute asparagus and shallots until soft
+    \item Grate the peel off the lemon
+    \item Add parsley, lemon peel and sugar
+    \item Add half of chicken stock, bring to boil and simmer for 5 minutes
+    \item Blend until smooth, add creme fraiche and adjust consistency with more stock
+    \item Season with lemon juice, salt and pepper
+\end{steps}
+\end{recipe}
+
 \end{document}
