--- a/main.tex
+++ b/main.tex
@@ -1119,4 +1119,53 @@ Serves 4
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Peaches in Muscat}{\totaltime{2 h}}
+\begin{ingredients}
+4 ripe peaches
+1/2 cup sweet Muscat
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Peel and slice peaches over a bowl (to catch juices)
+    \item Stir in Muscat and refrigerate for 2 to 6 hours
+\end{steps}
+If peaches are hard to peel, loosen skins in boiling water.
+
+Serve alone or with whipped cream or ice cream.
+\end{recipe}
+
+\begin{recipe}{Braised Peppers and Onions}{\totaltime{40 min}}
+\begin{ingredients}
+2 tbsp oil
+3 large bell peppers
+1 large onion
+2 cloves garlic
+2 tbsp ground cumin
+2 bay leaves
+1/2 tsp kosher salt
+black pepper
+\end{ingredients}
+\nextcolumn
+Serves 4--6 as a side
+\begin{steps}
+    \item Heat oil in large pot over medium heat
+    \item Cook all vegetables and spices, stirring occasionally, until tender but not browned, about 30 minutes
+\end{steps}
+Lower heat if necessary to prevent browning.
+\end{recipe}
+
+\iffalse % New recipe template
+\begin{recipe}{}{\totaltime{}}
+\begin{ingredients}
+
+\end{ingredients}
+\nextcolumn
+Serves
+\begin{steps}
+    \item
+\end{steps}
+\end{recipe}
+\fi
+
 \end{document}
